# cmake-template

./: .gitignore  CMakeLists.txt  LICENSE
